--- a/yaml/ACL4SSR_Online_Full_WithIcon.yaml
+++ b/yaml/ACL4SSR_Online_Full_WithIcon.yaml
@@ -12,6 +12,7 @@ proxy-groups:
       - 韩国节点
       - 手动切换
       - 欧洲节点
+      - 德国节点
       - DIRECT
   - name: 手动切换
     icon: https://testingcf.jsdelivr.net/gh/shindgewongxj/WHATSINStash@master/icon/select.png
@@ -37,6 +38,7 @@ proxy-groups:
       - 韩国节点
       - 手动切换
       - 欧洲节点
+      - 德国节点
       - DIRECT
   - name: OpenAi
     icon: https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Bot.png
@@ -52,6 +54,7 @@ proxy-groups:
       - 韩国节点
       - 手动切换
       - 欧洲节点
+      - 德国节点
       - DIRECT
   - name: 油管视频
     icon: https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/YouTube.png
@@ -67,6 +70,7 @@ proxy-groups:
       - 韩国节点
       - 手动切换
       - 欧洲节点
+      - 德国节点
       - DIRECT
   - name: 奈飞视频
     icon: https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix.png
@@ -83,6 +87,7 @@ proxy-groups:
       - 韩国节点
       - 手动切换
       - 欧洲节点
+      - 德国节点
       - DIRECT
   - name: 巴哈姆特
     icon: https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Bahamut.png
@@ -113,6 +118,7 @@ proxy-groups:
       - 韩国节点
       - 手动切换
       - 欧洲节点
+      - 德国节点
       - DIRECT
   - name: 国内媒体
     icon: https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/DomesticMedia.png
@@ -137,6 +143,7 @@ proxy-groups:
       - 日本节点
       - 韩国节点
       - 欧洲节点
+      - 德国节点
       - 手动切换
   - name: 微软Bing
     icon: https://testingcf.jsdelivr.net/gh/shindgewongxj/WHATSINStash@master/icon/bing.png
@@ -151,6 +158,7 @@ proxy-groups:
       - 日本节点
       - 韩国节点
       - 欧洲节点
+      - 德国节点
       - 手动切换
   - name: 微软云盘
     icon: https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/OneDrive.png
@@ -178,6 +186,7 @@ proxy-groups:
       - 日本节点
       - 韩国节点
       - 欧洲节点
+      - 德国节点
       - 手动切换
   - name: 苹果服务
     icon: https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Apple.png
@@ -247,7 +256,15 @@ proxy-groups:
       - 美国节点
       - 韩国节点
       - 欧洲节点
+      - 德国节点
       - 手动切换
+  - name: 德国节点
+    icon: https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/DE.png
+    include-all: true
+    filter: (?i)de|DE|OVH|Netcup
+    type: url-test
+    interval: 300
+    tolerance: 50
   - name: 欧洲节点
     icon: https://testingcf.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/European_Union.png
     include-all: true
